--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,19 +22,37 @@
             "type": "swift",
             "request": "launch",
             "args": [],
-            "cwd": "${workspaceFolder:build-tools}",
+            "cwd": "${workspaceFolder:build}",
             "name": "Debug landmap",
-            "program": "${workspaceFolder:build-tools}/.build/debug/landmap",
+            "program": "${workspaceFolder:build}/.build/debug/landmap",
             "preLaunchTask": "swift: Build Debug landmap"
         },
         {
             "type": "swift",
             "request": "launch",
             "args": [],
-            "cwd": "${workspaceFolder:build-tools}",
+            "cwd": "${workspaceFolder:build}",
             "name": "Release landmap",
-            "program": "${workspaceFolder:build-tools}/.build/release/landmap",
+            "program": "${workspaceFolder:build}/.build/release/landmap",
             "preLaunchTask": "swift: Build Release landmap"
+        },
+        {
+            "type": "swift",
+            "request": "launch",
+            "args": [],
+            "cwd": "${workspaceFolder:build-tools}",
+            "name": "Debug build-tool",
+            "program": "${workspaceFolder:build-tools}/.build/debug/build-tool",
+            "preLaunchTask": "swift: Build Debug build-tool"
+        },
+        {
+            "type": "swift",
+            "request": "launch",
+            "args": [],
+            "cwd": "${workspaceFolder:build-tools}",
+            "name": "Release build-tool",
+            "program": "${workspaceFolder:build-tools}/.build/release/build-tool",
+            "preLaunchTask": "swift: Build Release build-tool"
         }
     ]
 }
